--- a/test.html
+++ b/test.html
@@ -59,7 +59,7 @@
     let fpsHistory = [];
 
     async function loadModel() {
-      await tf.setBackend('webgl'); // ✅ быстро работает с AR WebGL
+      await tf.setBackend('webgl'); // ✅ принудительно WebGL
       await tf.ready();
       log('Using WebGL backend\n');
 
@@ -120,37 +120,42 @@
         gl.readPixels(0, 0, w, h, gl.RGBA, gl.UNSIGNED_BYTE, pixels);
         const imageData = new ImageData(new Uint8ClampedArray(pixels), w, h);
 
-        createImageBitmap(imageData).then(bitmap => {
+        createImageBitmap(imageData).then(async bitmap => {
           tempCtx.drawImage(bitmap, 0, 0, 224, 224);
-          const input = tf.tidy(() =>
-            tf.browser.fromPixels(tempCanvas).toFloat().div(255).expandDims()
-          );
-          const tPreEnd = performance.now();
 
-          const prediction = model.predict(input).squeeze();
-          prediction.data().then(() => {
-            const tPredictEnd = performance.now();
+          const input = tf.browser.fromPixels(tempCanvas, 3)
+                                  .resizeBilinear([224, 224])
+                                  .div(255.0)
+                                  .expandDims();
 
-            tf.browser.toPixels(tf.sub(1, prediction), tempCanvas).then(() => {
-              const tPostEnd = performance.now();
+          await tf.nextFrame(); // ✅ устранение pipeline block
 
-              maskCanvas.width = window.innerWidth;
-              maskCanvas.height = window.innerHeight;
-              maskCtx.clearRect(0, 0, maskCanvas.width, maskCanvas.height);
-              maskCtx.drawImage(tempCanvas.transferToImageBitmap(), 0, 0, maskCanvas.width, maskCanvas.height);
+          const tInferStart = performance.now();
+          const prediction = await model.predict(input); // НЕ .squeeze()
+          await tf.nextFrame(); // ✅ даём GPU закончить
+          const tInferEnd = performance.now();
 
-              tf.dispose([input, prediction]);
-              processingLock.busy = false;
+          const tPostStart = performance.now();
 
-              const now = performance.now();
-              const frameTime = now - lastFrameTime;
-              lastFrameTime = now;
-              fpsHistory.push(1000 / frameTime);
-              if (fpsHistory.length > 30) fpsHistory.shift();
-              const avgFps = fpsHistory.reduce((a, b) => a + b, 0) / fpsHistory.length;
+          tf.browser.toPixels(tf.sub(1, prediction.squeeze()), tempCanvas).then(() => {
+            const tPostEnd = performance.now();
 
-              log(`Pre: ${(tPreEnd - tPreStart).toFixed(1)}ms\nInfer: ${(tPredictEnd - tPreEnd).toFixed(1)}ms\nPost: ${(tPostEnd - tPredictEnd).toFixed(1)}ms\nFPS: ${avgFps.toFixed(1)}`);
-            });
+            maskCanvas.width = window.innerWidth;
+            maskCanvas.height = window.innerHeight;
+            maskCtx.clearRect(0, 0, maskCanvas.width, maskCanvas.height);
+            maskCtx.drawImage(tempCanvas.transferToImageBitmap(), 0, 0, maskCanvas.width, maskCanvas.height);
+
+            tf.dispose([input, prediction]);
+            processingLock.busy = false;
+
+            const now = performance.now();
+            const frameTime = now - lastFrameTime;
+            lastFrameTime = now;
+            fpsHistory.push(1000 / frameTime);
+            if (fpsHistory.length > 30) fpsHistory.shift();
+            const avgFps = fpsHistory.reduce((a, b) => a + b, 0) / fpsHistory.length;
+
+            log(`Infer: ${(tInferEnd - tInferStart).toFixed(1)}ms\nPost: ${(tPostEnd - tPostStart).toFixed(1)}ms\nFPS: ${avgFps.toFixed(1)}`);
           });
         });
       });
